<resources>
    <string name="app_name">Kenya Fuel Tax Calc</string>
    <string name="super_fuel">Super</string>
    <string name="diesel">Diesel</string>
    <string name="kerosene">Kerosene</string>
    <string name="calculate">Calculate</string>
    <string name="price">Price</string>
    <string name="levy">Levy Per Ltr</string>
    <string name="vat">VAT (e.g for 8% enter "8")</string>
    <string name="default_numeric">0.00</string>
    <string name="edit">Edit</string>
    <string name="ad_mob_app_id">ca-app-pub-1309759624469189~3964222636</string>
    <string name="ad_mob_banner_unit_id">ca-app-pub-1309759624469189/1644223197</string>
</resources>
