<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="325dp"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/priceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:maxWidth="100dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/levyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/levy"
            android:inputType="numberDecimal"
            android:maxWidth="100dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/vatEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vat"
            android:inputType="numberDecimal"
            android:maxWidth="100dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save" />

</LinearLayout>